introduce RPMTMPDIR and create link to it in RPM/tmp (in rpmbb script)

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -29,6 +29,8 @@ RPMBUILD=rpmbuild
 
 # CHECKME: works only on ALT?
 RPMDIR=`rpm --eval %_topdir`
+RPMTMPDIR=`rpm --eval %_tmppath`
+
 # Can be overrided in the scripts
 [ -n "$RPMTOPDIR" ] || RPMTOPDIR="$RPMDIR"
 
