pkgrepl: fix comma after packagename

--- a/tests/specpkgr.spec.in
+++ b/tests/specpkgr.spec.in
@@ -26,7 +26,7 @@ Requires: /usr/bin/xvt
 %endif
 Requires: libstdc++
 BuildPreReq: rpm-build-compat gcc4.1 gcc
-BuildRequires: imake xorg-cf-files gccmakedep
+BuildRequires: imake, xorg-cf-files gccmakedep
 
 Source: %name.source
 
