--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -56,6 +56,7 @@ EXAMPLEALTDISTRVERSION="p7"
 CURRENTBRANCHNAME="M70"
 
 # Build for Sisyphus by default
+# TODO: REMOVE IT
 MENV=SS
 
 [ -n "$DEBUG" ] && HASHERARG="-v $HASHERARG"
