config: fix run on non rpm systems

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -28,18 +28,19 @@ NICE="nice"
 RPMBUILD=rpmbuild
 
 # CHECKME: works only on ALT?
+if [ -x /bin/rpm ] ; then
 RPMDIR=$(rpm --eval %_topdir) || fatal
 RPMTMPDIR=$(rpm --eval %_tmppath) || fatal
+
+# TODO: get from git also?
+OWNERMAIL=$(rpm --eval %packager) || fatal
+fi
 
 # Can be overrided in the scripts
 [ -n "$RPMTOPDIR" ] || RPMTOPDIR="$RPMDIR"
 
 [ -n "$APTCONFBASE" ] || APTCONFBASE=$ETERBUILDETC/apt/apt.conf
 
-#OWNERMAIL=`grep "^%packager" ~/.rpmmacros | head -n 1 | sed -e "s/%packager[ \t]*//g"`
-# works only on ALT?
-# TODO: get from git also?
-OWNERMAIL=$(rpm --eval %packager) || fatal
 
 
 COMPANYFTP=etersoft.ru
