--- a/share/eterbuild/functions/build
+++ b/share/eterbuild/functions/build
@@ -24,10 +24,6 @@ uni_rpmbuild()
 
 	local SPECNAME="$1"
 	local SPECDIR=`dirname $SPECNAME`
-	local GEAR="gear -v"
-
-	$EPMCMD assure gear
-
 	local THRPARAM="--quiet"
 	[ -n "$USE_VENDOR" ] && THRPARAM="--define=_vendor $USE_VENDOR"
 
@@ -48,6 +44,9 @@ uni_rpmbuild()
 	if is_gear $SPECDIR ; then
 		[ -f "$SPECNAME" ] || fatal "run uni_rpmbuild with spec as 2nd parameter"
 		shift # skip spec name
+
+		local GEAR="gear -v"
+		$EPMCMD assure gear || fatal
 
 		# FIXME: use spec name as project name
 		GEARRULES=$(get_gear_rules_by_spec "$SPECNAME")
