--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -61,7 +61,8 @@ CURRENTBRANCHNAME="M80"
 [ -n "$DEBUG" ] && HASHERARG="-v $HASHERARG"
 
 #SSH_KEYFILE=~/.ssh/id_dsa
-GIRARHOST=git.alt
+# by default will detect gitery, git.alt in ~/.ssh/config
+#GIRARHOST=git.alt
 
 # Timeout in sec for ssh commands
 SSHTIMEOUT=300
