config: add check if _topdir is incorrect default /usr/src/RPM

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -31,6 +31,8 @@ RPMBUILD=rpmbuild
 # CHECKME: works only on ALT?
 if which rpm 2>/dev/null >/dev/null ; then
 RPMDIR=$(rpm --eval %_topdir) || fatal
+[ "$RPMDIR" = "/usr/src/RPM" ] && fatal "Please, set %_topdir in ~/.rpmmacros.
+"
 RPMTMPDIR=$(rpm --eval %_tmppath) || fatal
 
 # TODO: get from git also?
